[package]
name = "leetcode-runner-cli"
version = "0.2.6"
edition = "2021"

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
eyre = "0.6.8"
open = "4.1.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
