[package]
name = "leetcode-runner-cli"
version = "0.2.72"
edition = "2021"
authors = ["Vishal Das"]
description = "A tool to execute and submit leetcode problems from the command line"
readme = "README.md"
repository = "https://github.com/dvishal485/leetcode-runner-cli"
license = "Apache-2.0"
keywords = ["leetcode", "leetcode-cli", "leetcode-questions"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
eyre = "0.6.8"
open = "4.1.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
